# NeuroForge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
docker/: cortex.Dockerfile  docker-compose.yml  orchestrator.Dockerfile
neuroforge-bridge/wasm/: loader.js
neuroforge-core/: Cargo.toml
neuroforge-core/src/: lib.rs
neuroforge-cortex/: pyproject.toml
neuroforge-cortex/src/: cortex_pb2.py  cortex_pb2_grpc.py  docker-compose.yml  generate_proto.md  server.py
neuroforge-fluid-canvas/: index.html  package-lock.json  package.json
neuroforge-fluid-canvas/src/: App.tsx  main.tsx
neuroforge-genesis-ui/: index.html  package-lock.json  package.json
neuroforge-genesis-ui/src/: App.tsx  main.tsx  store.ts
neuroforge-immortal/: Cargo.toml
neuroforge-immortal/src/: lib.rs
neuroforge-intent-graph/src/: graph.py
neuroforge-orchestrator/: Cargo.toml  build.rs
neuroforge-orchestrator/proto/: cortex.proto
neuroforge-orchestrator/src/: lib.rs  main.rs
neuroforge-small-brain/: pyproject.toml
neuroforge-small-brain/src/: main.py
neuroforge-small-brain/src/neuroforge_small_brain.egg-info/: PKG-INFO  SOURCES.txt
scripts/: launch-ultra.ps1  launch.ps1
tests/: hr-demo.spec.ts
tests/performance/: test_throughput.py
