[package]
name = "neuroforge-core"
version = "0.1.0"
edition = "2021"
description = "Core event bus and intent graph engine – the beating heart of NeuroForge"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
